OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement_Group__c/Vendor_Program_Requirement_Group__c.object-meta.xml
<CustomObject>
    <description>This groups together multiple definitions and can be assigned to multiple vendor programs.</description>
    <label>Vendor Program Requirement Group</label>
    <nameField>
        <label>Vendor Program Requirement Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Program Requirement Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>