OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement_Group__c/fields/Default_For_Program_Group__c.field-meta.xml
<CustomField>
    <fullName>Default_For_Program_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional reverse mapping; lets you see if this group is set as a default for a specific Vendor Program Group.</description>
    <label>Default For Program Group</label>
    <referenceTo>Vendor_Program_Group__c</referenceTo>
    <relationshipLabel>Vendor Program Requirement Groups</relationshipLabel>
    <relationshipName>Default_For_Program_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>