OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement_Group__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Explanation of the group purpose</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>