OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement_Group__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lifecycle_Status_Values</valueSetName>
    </valueSet>
</CustomField>