OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement_Group__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional scoping — helps organize requirement groups per Vendor.</description>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Vendor Program Requirement Groups</relationshipLabel>
    <relationshipName>Vendor_Program_Requirement_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>